[gd_scene load_steps=8 format=3 uid="uid://bxcpvldpdl5np"]

[ext_resource type="Theme" uid="uid://dg107ll84c5qe" path="res://Objects/Themes/theme_campaign_ui_1.tres" id="1_orkym"]
[ext_resource type="Script" path="res://Objects/Campaign/military/army_creator/army_creator_UI.gd" id="1_qt6kx"]
[ext_resource type="PackedScene" uid="uid://d1yjnep65j74a" path="res://Objects/Campaign/military/army.tscn" id="3_vvd2k"]
[ext_resource type="PackedScene" uid="uid://dvfxbxjjelt38" path="res://Objects/Campaign/military/army_creator/btn_army_creator_unit.tscn" id="4_tccif"]
[ext_resource type="PackedScene" uid="uid://c4h7u5gwt5l34" path="res://Objects/Campaign/military/army_creator/army_creator_component.tscn" id="4_yu200"]
[ext_resource type="Resource" uid="uid://d2w3bw50854bv" path="res://Objects/Campaign/military/hastati.tres" id="5_wn8t5"]
[ext_resource type="Resource" uid="uid://c6160o34jcgfy" path="res://Objects/Campaign/military/bowman.tres" id="6_66c0u"]

[node name="ArmyCreatorUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_orkym")
script = ExtResource("1_qt6kx")
ArmyCampaignP = ExtResource("3_vvd2k")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -206.0
offset_bottom = 196.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ContainerBtnCreatorUnits" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BtnArmyCreatorUnit" parent="PanelContainer/MarginContainer/ContainerBtnCreatorUnits" instance=ExtResource("4_tccif")]
layout_mode = 2
text = "Hastati"
unit_data = ExtResource("5_wn8t5")

[node name="BtnArmyCreatorUnit2" parent="PanelContainer/MarginContainer/ContainerBtnCreatorUnits" instance=ExtResource("4_tccif")]
layout_mode = 2
text = "Bowman"
unit_data = ExtResource("6_66c0u")

[node name="BtnArmyCreatorUnit3" parent="PanelContainer/MarginContainer/ContainerBtnCreatorUnits" instance=ExtResource("4_tccif")]
layout_mode = 2
text = "Box"
unit_data = ExtResource("5_wn8t5")

[node name="PanelContainerNewArmy" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -399.0
offset_top = 8.0
offset_right = -206.0
offset_bottom = 188.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainerNewArmy"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainerNewArmy/MarginContainer"]
layout_mode = 2

[node name="ContainerBtnNewArmy" type="VBoxContainer" parent="PanelContainerNewArmy/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BtnCreateArmy" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -167.0
offset_top = 146.0
offset_right = -41.0
offset_bottom = 177.0
grow_horizontal = 0
text = "Create army"

[node name="LabelProvinceSpawn" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="ArmyCreatorComponent" parent="." instance=ExtResource("4_yu200")]
unique_name_in_owner = true

[connection signal="pressed" from="BtnCreateArmy" to="." method="_on_btn_create_army_pressed"]
